fixed add task container being squished on right side.

--- a/client/app/styles/queue/_correspondence.scss
+++ b/client/app/styles/queue/_correspondence.scss
@@ -569,6 +569,7 @@ $translate: 11%;
 
 .add-task-container {
   margin-left: 5%;
+  padding-right: 20px;
 }
 
 .add-tasks-button-for-unrelated-appeals {
